# clarke_wright_gpu

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  docker-compose.yml  main
src/: clarke_wright.cu  clarke_wright.h  main.cpp
